--- a/packages/stack-drawer/package.json
+++ b/packages/stack-drawer/package.json
@@ -10,6 +10,9 @@
     },
     "./style": "./dist/style.css"
   },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "vite build",
